# Quarter

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
docs/: quarter.doxygen.in
html/: Makefile.in
include/: Makefile.in
include/Quarter/: Makefile.in
include/Quarter/devices/: Makefile.in
include/Quarter/eventhandlers/: Makefile.in
src/: Makefile.in
src/Quarter/: EventFilter.cpp  Makefile.am  Makefile.in  Mouse.cpp
src/examples/: Makefile.am  Makefile.in  MdiMainWindow.cpp  MdiMainWindow.h  MdiQuarterWidget.cpp  MdiQuarterWidget.h  directui.cpp  examiner.cpp  inheritui.cpp  mdi.cpp  superimposition.cpp
src/plugins/: Makefile.am  Makefile.in
